fix(Calendar): nowrap for select (#9480)

--- a/packages/vkui/src/components/CustomSelectOption/CustomSelectOption.module.css
+++ b/packages/vkui/src/components/CustomSelectOption/CustomSelectOption.module.css
@@ -55,6 +55,10 @@
   word-break: break-word;
 }
 
+.textNoWrap {
+  white-space: nowrap;
+}
+
 .after {
   display: flex;
   flex-shrink: 0;
